--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">HolaMundo</string>
+    <string name="Titulo">Aplicacion Para Saludar</string>
+    <string name="Saluda">Saludar</string>
+    <string name="Saludar">Saludar</string>
 </resources>
