--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">HolaMundo</string>
-    <string name="Saluda">Say Hi</string>
-    <string name="Saludar">Say Hi</string>
-    <string name="Titulo">Hellow</string>
+    <string name="app_name">Hola Mundo</string>
+    <string name="Titulo">Aplicacion Para Saludar</string>
+    <string name="Saludar">Hola</string>
+    <string name="Saluda"></string>
 </resources>
