Interfaz Principal Terminada

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,4 +4,6 @@
     <string name="Saluda">Say Hi</string>
     <string name="Saludar">Say Hi</string>
     <string name="Titulo">Hellow</string>
+    <string name="apellido">Last Name</string>
+    <string name="Nombre">Name</string>
 </resources>
