Interfaz Saludo Terminada

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,7 +3,8 @@
     <string name="app_name">Hola Mundo</string>
     <string name="Titulo">Aplicacion Para Saludar</string>
     <string name="Saludar">Hola</string>
-    <string name="Saluda"></string>
+    <string name="Saluda">Di Hola</string>
     <string name="apellido">Apellido</string>
     <string name="Nombre">Nombre</string>
+    <string name="Bienvenido">Bienvenido</string>
 </resources>
