--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,5 @@
     <string name="Titulo">Hellow</string>
     <string name="apellido">Last Name</string>
     <string name="Nombre">Name</string>
+    <string name="Bienvenido">Welcome</string>
 </resources>
