--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Saludar">Saludar</string>
     <string name="apellido">apellido</string>
     <string name="Nombre">Nombre</string>
+    <string name="Bienvenido">Bienvenido</string>
 </resources>
